data/derived/comb/progs/unify/prog7790.ml.out
Characters 27-33:
  let fixpoint (f,b) = if not(f, b) then
                             ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type bool
